<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Snail</string>
    <string name="first_pager">首页</string>
    <string name="buy_car">买车</string>
    <string name="sell_car">卖车</string>
    <string name="sys_notice">系统消息</string>
    <string name="mine">我的</string>
    <string name="login">登录</string>
    <string name="start_use">开始使用</string>

    <string name="connecting_text">连接中&#8230;</string>
    <string name="connected_text">连接成功！</string>
    <string name="connection_error_text">连接失败！</string>
    <string name="login_remark">登录即表示您同意</string>
    <string name="chiquan_proxy">《池泉二手货车用户服务协议》</string>
    <string name="login_register">还没有账号？点我注册</string>
    <string name="register">注册</string>
    <!--<string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>-->
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="next_step">下一步</string>
    <string name="select_truck_type">选择车型</string>
    <string name="no_truch_type">抱歉,没有类型可选</string>
    <string name="no_selected_truck_type">抱歉,您还未选择车型</string>
    <string name="truck_pic">车辆照片</string>
    <string name="must_fill">(必填项)</string>
    <string name="un_must_fill">(非必填)</string>
    <string name="pic_explain">至少上传3张，多拍多曝光</string>
    <string name="contact_msg">联系人信息</string>
    <string name="contact">联系人</string>
    <string name="contact_hint">请输入联系人姓名</string>
    <string name="mobile_number">手机号</string>
    <string name="mobile_number_hint">请输入手机号</string>
    <string name="truck_brand">车辆品牌</string>
    <string name="truck_brand_hint">请选择车辆品牌</string>
    <string name="truck_price">车辆价格</string>
    <string name="truck_price_hint">请输入卖价</string>
    <string name="truck_price_unit">万元</string>
    <string name="truck_type">车型</string>
    <string name="truck_particular">车辆年份</string>
    <string name="truck_particular_hint">请选择车辆年份</string>
    <string name="emission_standard">排放标准</string>
    <string name="emission_standard_hint">请选择排放标准</string>
    <string name="mileage">表显里程</string>
    <string name="mileage_hint">请输入里程数</string>
    <string name="mileage_unit">万公里</string>
    <string name="drive_mode">驱动方式</string>
    <string name="drive_mode_hint">请选择驱动方式</string>
    <string name="engine_brand">发动机品牌</string>
    <string name="engine_brand_hint">请选择发动机品牌</string>
    <string name="max_horsepower">最大马力</string>
    <string name="max_horsepower_hint">请输入最大马力</string>
    <string name="horsepower_unit">匹</string>
    <string name="carriage_length">箱体长度</string>
    <string name="carriage_length_hint">请输入箱体长度</string>
    <string name="carriage_length_uint">米</string>
    <string name="fuel_mode">燃料类型</string>
    <string name="fuel_mode_hint">请选择燃料类型</string>
    <string name="has_transfer">是否可过户</string>
    <string name="has_transfer_hint">请选择是否可过户</string>
    <string name="truck_color">车辆颜色</string>
    <string name="truck_color_hint">请选择车辆颜色</string>
    <string name="truck_trait">车辆特色</string>
    <string name="truck_belong_to">车辆归属：</string>
    <string name="personal">个人</string>
    <string name="business">商家</string>
    <string name="input_msg">填写信息</string>
    <string name="upload_pic">上传照片</string>
    <string name="sure_upload">确认上传</string>
    <string name="username_hint">请输入用户名</string>
    <string name="mobile_hint">请输入手机号</string>
    <string name="mobile_hint2">手机号码应该是11位数字</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_hint2">请输入6-12位字母或数字密码</string>
    <string name="password_repeat_hint">请再次输入密码</string>
    <string name="password_unqequal">两次输入密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="select_city">选择城市</string>
    <string name="buy_car_search_hint">品牌/车系/价格(万)</string>
    <string name="search">搜索</string>
    <string name="price_max">排序</string>
    <string name="vechicle_type">车型</string>
    <string name="vehicle_brand">品牌</string>
    <string name="price">价格</string>
    <string name="more">更多</string>
    <string name="brand_select">品牌选择</string>
    <string name="locationing">定位中</string>

    <string-array name="area_arr">
        <item>   城市   </item>
        <item>   省份   </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sure_to_query_truck">确定查询车辆</string>
    <string name="truck_info">车辆信息</string>
    <string name="city_select">城市选择</string>
    <string name="name_hint">请输入姓名</string>
    <string name="upload_fail">上传失败</string>
    <string name="upload_success">上传成功</string>
    <string name="submit_sell_truck">提交卖车</string>
    <string name="place_hint">请选择看车地点</string>
    <string name="submit_success">提交成功</string>
    <string name="all_pic_uploaded">抱歉，所以照片都上传过了</string>
    <string name="please_choose_at_least_one">请至少选择一个</string>
    <string name="reset">重置</string>
    <string name="search_history">历史搜索</string>
    <string name="clear">清空</string>
    <string name="search_hint">请输入搜索内容</string>

</resources>
