<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/com_size_15"
    android:orientation="vertical">

    <LinearLayout
        style="@style/lin_base"
        android:orientation="vertical">

        <include layout="@layout/block_bar" />

        <View style="@style/hLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/com_size_15">

            <LinearLayout
                style="@style/lin_base"
                android:orientation="horizontal"
                android:paddingTop="@dimen/com_size_15"
                android:paddingRight="@dimen/com_size_15"
                android:paddingBottom="@dimen/com_size_15">

                <TextView
                    style="@style/text_base"
                    android:text="@string/contact" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/edit_base"
                    android:layout_marginLeft="@dimen/com_size_15"
                    android:layout_weight="1"
                    android:hint="@string/contact_hint" />
            </LinearLayout>

            <View style="@style/hLine" />

            <LinearLayout
                style="@style/lin_base"
                android:orientation="horizontal"
                android:paddingTop="@dimen/com_size_15"
                android:paddingRight="@dimen/com_size_15"
                android:paddingBottom="@dimen/com_size_15">

                <TextView
                    style="@style/text_base"
                    android:text="@string/mobile_number" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/edit_base"
                    android:layout_marginLeft="@dimen/com_size_15"
                    android:layout_weight="1"
                    android:hint="@string/mobile_number_hint" />
            </LinearLayout>

            <View style="@style/hLine" />

            <LinearLayout
                android:id="@+id/lin_place"
                style="@style/lin_base"
                android:orientation="horizontal"
                android:background="@drawable/btn_white_corners"
                android:paddingTop="@dimen/com_size_15"
                android:paddingRight="@dimen/com_size_15"
                android:paddingBottom="@dimen/com_size_15"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_base"
                    android:text="看车地点" />

                <TextView
                    android:id="@+id/tv_place"
                    style="@style/text_base"
                    android:layout_marginLeft="@dimen/com_size_15"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:hint="@string/place_hint" />

                <ImageView
                    android:layout_width="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_text_size"
                    android:src="@mipmap/to"
                    android:layout_marginLeft="@dimen/com_size_5"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
